Fix overview text wrapping issue

--- a/store/static/css/xda.css
+++ b/store/static/css/xda.css
@@ -74,3 +74,6 @@ body, html {
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
 }
+#overviewText {
+  word-break: break-word;
+}
